Add dist directory to repository for Docker builds without rollup compilation

--- a/.gitignore
+++ b/.gitignore
@@ -83,7 +83,7 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+# dist - включен в репозиторий для использования в Docker без сборки
 
 # Gatsby files
 .cache/
